[package]
name = "hbbft"
version = "0.1.1"
authors = [
    "Vladimir Komendantskiy <komendantsky@gmail.com>",
    "Andreas Fackler <AndreasFackler@gmx.de>",
    "Peter van Nostrand <jnz@riseup.net>",
    "Andrew Gross <andogro@gmail.com>",
    "Nick Sanders <nsan1129@gmail.com>",
    "Marc Brinkmann <git@marcbrinkmann.de>",
]
categories = ["algorithms", "asynchronous", "cryptography", "network-programming"]
keywords = ["consensus", "asynchronous", "threshold"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/poanetwork/hbbft"
description = "The Honey Badger of Byzantine Fault Tolerant Consensus Protocols"
edition = "2018"

[badges]
travis-ci = { repository = "poanetwork/hbbft" }

[workspace]
members = ["hbbft_testing"]

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
derivative = "2.2.0"
env_logger = "0.9.0"
failure = "0.1.6"
hex_fmt = "0.3.0"
init_with = "1.1.0"
log = "0.4.17"
rand = "0.7"
rand_derive = "0.5.0"
reed-solomon-erasure = "5.0.3"
serde = { version = "1.0.137", features = ["derive", "rc"] }
threshold_crypto = { rev = "a7fbfa4", git = "https://github.com/fedimint/threshold_crypto" }
tiny-keccak = { version = "2.0.2", features = ["sha3"] }

[dev-dependencies]
colored = "2.0.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.5"
docopt = "1.1.1"
hbbft_testing = { path = "hbbft_testing", features = ["use-insecure-test-only-mock-crypto"] }
itertools = "0.10.3"
number_prefix = "0.4.0"
proptest = "0.10.1"

[[example]]
name = "consensus-node"

[[example]]
name = "simulation"

# This will turn on overflow checks in `cargo test --release` and
# `cargo bench`. Dependencies will not be affected, as they use the
# `[profile.release]` block in both cases.
[profile.bench]
overflow-checks = true

[features]
use-insecure-test-only-mock-crypto = ["threshold_crypto/use-insecure-test-only-mock-crypto"]
simd-accel = ["reed-solomon-erasure/simd-accel"]
